# julia

./: .rustfmt.toml  Cargo.toml  Dockerfile  LICENCE.md  README.md  index.html  index.js  julia.html  julia.js  mandel.html  mandel.js  style.css
src/: argand.rs  julia.rs  lib.rs  mandel.rs  utils.rs
