[package]
name = "julia"
description = "Fractal rendering in the browser using rust compiled to wasm"
license = "MIT"
version = "0.1.0"
authors = ["Andrew Smith"]
edition = "2021"
repository = "https://github.com/virgesmith/julia"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "*"
js-sys = "*"
num-complex = "*"
num-traits = "*"
rayon = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "*", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true


# [dependencies.web-sys]
# version = "^0.3.4"
# features = [
#   'Document',
#   'Element',
#   'HtmlElement',
#   'Node',
#   'Window',
#   'console'
# ]
